removed letzte5 from JSON-response and purged related logic